--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+	<groupId>net.sf.ehcache</groupId>
+	<artifactId>ehcache</artifactId>
+	<version>2.8.3</version>
+</dependency>
+	
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
@@ -50,6 +56,12 @@
 			<artifactId>tyrus-standalone-client</artifactId>
 			<version>1.8.2</version>
 		</dependency>
+		<dependency>
+	<groupId>jcs</groupId>
+	<artifactId>jcs</artifactId>
+	<version>1.3</version>
+</dependency>
+		
 	</dependencies>
 
 	<build>
